# rw-textinput

./: helper.py
About/: About.xml  Manifest.xml
Source/TextInput/: TextInput.cs  TextInput.csproj  TextInput.sln
Source/TextInput/Properties/: AssemblyInfo.cs
Source/rwtext/: pyproject.toml
Source/rwtext-go/: .gitignore  go.mod  main.go
Source/rwtext/rwtext/: __init__.py  __main__.py
Source/rwtext/tests/: test_rwtext.py
