[tool.poetry]
name = "rwtext"
version = "0.1.0"
description = ""
authors = ["Namekuji <11836635+nmkj-io@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
PySide2 = "^5.15.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pex = "^2.1.102"
black = "^22.6.0"
pyinstaller = "^5.3"

[tool.poetry.scripts]
rwtext = "rwtext:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
